public/css/style.css
* {
  margin: 0;
}
html, body {
  height: 100%;
}
.page-wrapper {
  min-height: 100%;
  margin: 0 auto -175px; /* the bottom margin is the negative value of the footer's height */
}
footer, .push {
  height: 175px; /* '.push' must be the same height as 'footer' */
  clear:both;
}

#maincontent {
    padding-top:.25em;
}

#login-form-container {
    padding-top:2em;
}
/*

Sticky Footer by Ryan Fait
http://ryanfait.com/

*/


.label-warning {
  background:#C25019;
}

.spacer25 {
  height:25px;
}
.spacer50 {
  height:50px;
}
#page-header {
 background: black;
  position:relative;
}
#page-header span {
  display:inline-block;
}
#header-logo {
  height:42px;
}
.logos-container {
    padding:.75em;
}
#content-wrapper {
  margin-bottom:5em;
}
.page-header {
  margin-top:1em;
}
.page-header.entities-list {
    overflow:hidden;
}
#frontpage-sitename {
  color:white;
  vertical-align:bottom;
  margin-bottom:1em;
}
.sitename-link {
  color:white;
}
.sitename-link:hover {
  color:white;
  text-decoration:none;
}
.pagetitlelink {
  color:rgb(243,243,243);
}
.pagetitlelink:hover {
  color:white;
  text-decoration:none;
}

#logged-in-badge {
  text-align:right;
  margin-right:.2em;
  margin-bottom:.5em;
}

.queue-notification:hover,
.greeting:hover {
  text-decoration:underline;
}

.menu-bar {
    background:white;
    width:100%;
}

.menu-links {
  border-bottom:none;
  list-style-type:none;
  margin-bottom:0;
}
.menu-links li {
  margin-bottom:0px;
  display:inline-block;
  padding:.35em 1em;
}
.menu-links>li>a {
  border-radius:2px 2px 0px 0px;
  color:black;  
}
.menu-links>li>a {
    padding:5px 15px;
}
.menu-links>li>a:hover {
  color:#580f8b;
  background:white;
  border:none;
  text-decoration:none;
}
.menu-links>li:hover {
  background:white;
}
.menu-links>li.active>a {
  margin-right:0px;
}

.admin-menu-link a {
  color:#e1480c !important;
}
.admin-nav-sidebar {
  max-width:250px;
  font-size:.85em;
  margin-top:1em;
  min-width:245px;
  padding:1em 1em 3em 1em;
}
.admin-nav-sidebar .nav-item:hover {
    background:lightgray;
    border-radius:3px;
}
.admin-nav-sidebar .nav-link {
    color:#337ab7;
}
.admin-nav-sidebar li.active>a {
  background:#e8e8e8;
  color:rgb(82, 82, 82);
}
.list-group-item.active>.badge, .nav-pills>.active>a>.badge {
  color:white;
  background:#777;
}


.skip {
  position: absolute;
  top: -1000px;
  left: -1000px;
  height: 1px;
  width: 1px;
  text-align: left;
  overflow: hidden;
}
    
a.skip:active, 
a.skip:focus, 
a.skip:hover {
  position: relative;
  left: 0; 
  top: 0;
  width: auto; 
  height: auto; 
  overflow: visible; 
  display: block;
}

#keyword-search-form label {
  position: absolute;
  top: -1000px;
  left: -1000px;
  height: 1px;
  width: 1px;
  text-align: left;
  overflow: hidden;
}
#keyword-search-submit {
  border-radius:0;
  }

#keyword-search-form.input-group {
  width:100%;
}
#homepage-container {
  text-align:center;
  padding-top:4em;
}

#content {
}
.update-dataset-link {
  padding-top:.5em;
  padding-bottom:1em;
}
.update-dataset-link a,
.entity-add-link,
.entity-remove-link {
  color:rgb(224, 101, 101);
}
.entity-remove-link:hover {
  color:red;
}
.entities-list-item {
  margin:.7em 0em;
}

.add-new-entity-link {
    float:left;
}
.view-archived-datasets-link {
    float:right;
}
#facets-pane {
  padding:.5em;
  border-right:1px solid lightgray;
  border-bottom:1px solid lightgray;
  max-width:300px;  
}
.facet-section {
  padding:.5em;
}
.facetBreadcrumb {
  margin:.25em;
}

.facetBreadcrumb:hover .facetRemove {
  color:white;
  font-weight:bold;
}
  
#internal-only-filter-container {
    padding-top:1.5em;
    padding-left:1em;
    font-size:.9em;
}
.login-restricted-filter-link {
    margin-top:.5em;
    display:block;
}
.internal-dataset-badge {
    margin-bottom:.75em;
    display:inline-block;
    font-size:.7em;
    color:white;
    background:#59228e;
    padding:.3em .7em;
    border-radius:3px;
    vertical-align:top;
}
.internal-dataset-badge.details-page {
    vertical-align:text-top;
}

.restricted-dataset-badge {
    margin-bottom:.75em;
    display:inline-block;
    font-size:.7em;
    color:white;
    background:#b20000;
    padding:.3em .7em;
    border-radius:3px;
    vertical-align:top;
}

button.nextPage {
 float:right;
}
button.prevPage {
 float:left;
}

#pagerContainer {
 margin:0 auto;
margin-top:1.5em;
margin-bottom:10em;
 width:70%;
}

li.dataset-summary h4 {
    margin-bottom:.75rem;
}

#results-list {
  padding-left:1.25em;
}

#results-list li {
  padding:1.25em 0em;
  border-bottom:1px solid lightgray;
}

#results-list dt {
  text-align:right;
}
#results-list dd {
  padding-left:1.5em;
}
#facets-list {
  font-size:.9em;
  padding-left:.25em;
}


.facet-header {
  padding:.25em 0em;
  border-bottom:1px solid lightgray;
  color:rgb(100,100,100);
}

li.facet-item {
  padding:.5em 0em;
  overflow:auto;
  font-size:.9em;
}


li span.facet-name {
  float:left;
}

li span.facet-numresults {
  float:right;
  color:rgb(121,121,121);
}

.search-box-description {
color:gray;
}

/*********************************
 *
 *  FRONTPAGE SEARCH CONTAINER
 *
 ********************************/
#frontpage-search-container {
  text-align:center;
  background:black;
  width:100%;
  border-bottom:1px solid lightgray;
  padding:2em 15px;
  margin-bottom:3em;
}

#frontpage-search-form-container {
    width: 550px;
    margin:auto;
    margin-bottom:-78px;
}
#frontpage-search-form-container #keyword-search-input {
  padding:.5em;
  height:auto;
  font-size:1.25em;
  background:#f7f7f7;
}
#frontpage-search-form-container #keyword-search-submit {
  border-radius:0;
  padding:.5em 1em;
  background: #580f8b;
  background-image:none;
  color:white;
  text-shadow:none;
  border:1px solid #580f8b;
  font-size:1.25em;
  margin-left:0px;
}
#frontpage-search-form-container #keyword-search-submit:hover {
  background:#692d96;
}
#frontpage-search-form-container .input-group-btn {
  font-size:inherit;
}
/* ... */

